// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker DatePicker date 1`] = `
<DatePicker
  cancelText="取消"
  defaultValue=""
  disabled={false}
  locale={
    Object {
      "day": "日",
      "hour": "时",
      "minute": "分",
      "month": "月",
      "year": "年",
    }
  }
  minuteStep={1}
  mode="date"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择日期"
  prefixCls="za-picker"
  title="选择日期"
  value="2017-09-06"
  valueMember="value"
>
  <div
    className="za-picker"
  >
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  选择日期
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <DatePickerView
                    cancelText="取消"
                    defaultValue=""
                    disabled={false}
                    locale={
                      Object {
                        "day": "日",
                        "hour": "时",
                        "minute": "分",
                        "month": "月",
                        "year": "年",
                      }
                    }
                    minuteStep={1}
                    mode="date"
                    okText="确定"
                    onCancel={[Function]}
                    onClick={[Function]}
                    onValueChange={[Function]}
                    placeholder="请选择"
                    prefixCls="za-picker"
                    title="请选择"
                    value="2017-09-06"
                    valueMember="value"
                    visible={true}
                  >
                    <div
                      className="za-picker-mask-top"
                    >
                      <div
                        className="za-picker-mask-bottom"
                      >
                        <WheelGroup
                          cols={Infinity}
                          dataSource={Array []}
                          disabled={false}
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-wheel-group"
                          selectedValue={
                            Array [
                              "2017",
                              "8",
                              "6",
                            ]
                          }
                          valueMember="value"
                        >
                          <div
                            className="za-wheel-group"
                          />
                        </WheelGroup>
                      </div>
                    </div>
                  </DatePickerView>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className="fade-leave"
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</DatePicker>
`;

exports[`DatePicker DatePicker datetime 1`] = `
<DatePicker
  cancelText="取消"
  defaultValue="2017-11-03 15:00"
  disabled={false}
  locale={
    Object {
      "day": "日",
      "hour": "时",
      "minute": "分",
      "month": "月",
      "year": "年",
    }
  }
  max="2017-11-12 14:00"
  min="2017-11-02 11:00"
  minuteStep={1}
  mode="datetime"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择时间"
  prefixCls="za-picker"
  title="选择时间"
  value=""
  valueMember="value"
>
  <div
    className="za-picker"
  >
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  选择时间
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <DatePickerView
                    cancelText="取消"
                    defaultValue="2017-11-03 15:00"
                    disabled={false}
                    locale={
                      Object {
                        "day": "日",
                        "hour": "时",
                        "minute": "分",
                        "month": "月",
                        "year": "年",
                      }
                    }
                    max="2017-11-12 14:00"
                    min="2017-11-02 11:00"
                    minuteStep={1}
                    mode="datetime"
                    okText="确定"
                    onCancel={[Function]}
                    onClick={[Function]}
                    onValueChange={[Function]}
                    placeholder="请选择"
                    prefixCls="za-picker"
                    title="请选择"
                    value="2017-11-03 15:00"
                    valueMember="value"
                    visible={true}
                  >
                    <div
                      className="za-picker-mask-top"
                    >
                      <div
                        className="za-picker-mask-bottom"
                      >
                        <WheelGroup
                          cols={Infinity}
                          dataSource={Array []}
                          disabled={false}
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-wheel-group"
                          selectedValue={
                            Array [
                              "2017",
                              "10",
                              "3",
                              "15",
                              "0",
                            ]
                          }
                          valueMember="value"
                        >
                          <div
                            className="za-wheel-group"
                          />
                        </WheelGroup>
                      </div>
                    </div>
                  </DatePickerView>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</DatePicker>
`;

exports[`DatePicker DatePicker month 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-container za-picker-hidden"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              选择年份
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-mask-top"
              >
                <div
                  class="za-picker-mask-bottom"
                >
                  <div
                    class="za-wheel-group"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker time 1`] = `
<DatePicker
  cancelText="取消"
  defaultValue="2017-11-03 15:00"
  disabled={false}
  locale={
    Object {
      "day": "日",
      "hour": "时",
      "minute": "分",
      "month": "月",
      "year": "年",
    }
  }
  minuteStep={15}
  mode="time"
  okText="确定"
  onCancel={[Function]}
  onClick={[Function]}
  placeholder="请选择时间"
  prefixCls="za-picker"
  title="选择时间"
  value=""
  valueMember="value"
>
  <div
    className="za-picker"
  >
    <div
      className="za-picker-container za-picker-hidden"
      onClick={[Function]}
    >
      <Popup
        animationDuration={200}
        autoClose={false}
        direction="bottom"
        mask={true}
        maskType="normal"
        onMaskClick={[Function]}
        prefixCls="za-popup"
        stayTime={3000}
        visible={false}
      >
        <div
          className="za-popup za-popup-hidden"
        >
          <div
            className="za-popup-wrapper za-popup-wrapper-bottom"
            style={
              Object {
                "WebkitTransitionDuration": "200ms",
                "transitionDuration": "200ms",
              }
            }
          >
            <div
              className="za-picker-wrapper"
            >
              <div
                className="za-picker-header"
              >
                <div
                  className="za-picker-cancel"
                  onClick={[Function]}
                >
                  取消
                </div>
                <div
                  className="za-picker-title"
                >
                  选择时间
                </div>
                <div
                  className="za-picker-submit"
                  onClick={[Function]}
                >
                  确定
                </div>
              </div>
              <div
                className="za-picker-mask-top"
              >
                <div
                  className="za-picker-mask-bottom"
                >
                  <DatePickerView
                    cancelText="取消"
                    defaultValue="2017-11-03 15:00"
                    disabled={false}
                    locale={
                      Object {
                        "day": "日",
                        "hour": "时",
                        "minute": "分",
                        "month": "月",
                        "year": "年",
                      }
                    }
                    minuteStep={15}
                    mode="time"
                    okText="确定"
                    onCancel={[Function]}
                    onClick={[Function]}
                    onValueChange={[Function]}
                    placeholder="请选择"
                    prefixCls="za-picker"
                    title="请选择"
                    value="2017-11-03 15:00"
                    valueMember="value"
                    visible={true}
                  >
                    <div
                      className="za-picker-mask-top"
                    >
                      <div
                        className="za-picker-mask-bottom"
                      >
                        <WheelGroup
                          cols={Infinity}
                          dataSource={Array []}
                          disabled={false}
                          itemRender={[Function]}
                          onValueChange={[Function]}
                          prefixCls="za-wheel-group"
                          selectedValue={
                            Array [
                              "15",
                              "0",
                            ]
                          }
                          valueMember="value"
                        >
                          <div
                            className="za-wheel-group"
                          />
                        </WheelGroup>
                      </div>
                    </div>
                  </DatePickerView>
                </div>
              </div>
            </div>
          </div>
          <Mask
            className=""
            onClose={[Function]}
            prefixCls="za-mask"
            style={
              Object {
                "WebkitAnimationDuration": "200ms",
                "animationDuration": "200ms",
              }
            }
            type="normal"
            visible={false}
          />
        </div>
      </Popup>
    </div>
  </div>
</DatePicker>
`;

exports[`DatePicker DatePicker visible 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-container"
  >
    <div
      class="za-popup"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              选择年份
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-mask-top"
              >
                <div
                  class="za-picker-mask-bottom"
                >
                  <div
                    class="za-wheel-group"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-mask normal"
        style="-webkit-animation-duration:200ms;animation-duration:200ms"
      />
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker year 1`] = `
<div
  class="za-picker"
>
  <div
    class="za-picker-container za-picker-hidden"
  >
    <div
      class="za-popup za-popup-hidden"
    >
      <div
        class="za-popup-wrapper za-popup-wrapper-bottom"
        style="-webkit-transition-duration:200ms;transition-duration:200ms"
      >
        <div
          class="za-picker-wrapper"
        >
          <div
            class="za-picker-header"
          >
            <div
              class="za-picker-cancel"
            >
              取消
            </div>
            <div
              class="za-picker-title"
            >
              选择年份
            </div>
            <div
              class="za-picker-submit"
            >
              确定
            </div>
          </div>
          <div
            class="za-picker-mask-top"
          >
            <div
              class="za-picker-mask-bottom"
            >
              <div
                class="za-picker-mask-top"
              >
                <div
                  class="za-picker-mask-bottom"
                >
                  <div
                    class="za-wheel-group"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
